---------------------------------
MUI NList MCC classes - ChangeLog
---------------------------------

$Id$
$Source$

2005-01-01  Nicolas Sallin <henes@biclodon.com>

    * NList_mcc: Fixed wrong usage of MUI_MAXMAX

2004-12-15  Jens Langner <Jens.Langner@light-speed.de>

    * made sure all revisions/dates are bumped of all Nlist classes
      for upcoming new NList release.

2004-12-15  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc: On some circumstances MUIA_NList_InsertPositions was not
      set correctly if the element has been inserted via 
      MUIV_NList_Insert_Sorted. Hopfully fixed now.

2004-12-14  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc: Fixed insert refresh problem

2004-12-13  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc:  Fixed offset refresh bug
    * NList_mcc, NListviews_mcp: Added new prefs option to disable
      the vertical centering of the text lines (can be found on the
      misc2 sub page)
    * NListviews_mcp: Eliminated a misc sub page. In the future the
      rest should be eliminated as well.

2004-10-24  Jens Langner <Jens.Langner@light-speed.de>

    * include/mccclass_68k.S: updated mcc 68k->PPC cross call stubs to
      latest version created by fdtrans 51.1
    
2004-10-03  Jens Langner <Jens.Langner@light-speed.de>,
            Sebastian Bauer <mail@sebastianbauer.info>

    * mccheader.c: Special Fun of Computing fix. Return value of
      PreClassInitFunc() was not evaluated.

2004-09-12  Jens Langner <Jens.Langner@light-speed.de>

    * all: modified all makefiles to use "-W -Wall" as the warning
      level and adapted all source files accordingly. Reactivated
      the DEBUG options in all morphos makefiles aswell as the
      debugging options can be dynamically disabled on the
      commandline by "make DEBUG=" anyway.

2004-08-26  Nicolas Sallin <henes@morphos.de>

    * All: More changes for morphos.

2004-08-25  Sebastian Bauer <mail@sebastianbauer.info>
